rust/macros/tests/invalid/target/debug/deps/only_arrow-96be28c6dfedd094.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow-96be28c6dfedd094.d: only_arrow.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libonly_arrow-96be28c6dfedd094.rmeta: only_arrow.rs Cargo.toml

only_arrow.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
